C2: assert(final_con == (jlong)final_int) failed: final value should be integer

XMLWordPrintable

    • b03

        The attached test fails with the following assertion:

        To reproduce:
        $ java -Xbatch -XX:CompileOnly=Test Test.java

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/mach5/mesos/work_dir/slaves/741e9afd-8c02-45c3-b2e2-9db1450d0832-S179622/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/72cab011-e6f0-4b37-b72c-1a28ae55422a/runs/5b27fa5b-32f8-4c80-9524-015f5098fcf7/workspace/open/src/hotspot/share/opto/loopnode.cpp:2299), pid=276454, tid=276467
        # assert(final_con == (jlong)final_int) failed: final value should be integer
        #
        # JRE version: Java(TM) SE Runtime Environment (21.0+25) (fastdebug build 21-ea+25-LTS-2192)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-ea+25-LTS-2192, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x1274363] LoopLimitNode::Value(PhaseGVN*) const+0x2c3
        #
        .........
        Command Line: -XX:CompileOnly=Test::test -Xbatch --add-modules=ALL-DEFAULT jdk.compiler/com.sun.tools.javac.launcher.Main Test.java
        .........
        Current CompileTask:
        C2: 1433 84 b 4 Test::test (33 bytes)

        Stack: [0x00007fb726a00000,0x00007fb726b00000], sp=0x00007fb726afb2a0, free space=1004k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x1274363] LoopLimitNode::Value(PhaseGVN*) const+0x2c3 (loopnode.cpp:2299)
        V [libjvm.so+0x1518230] PhaseCCP::analyze()+0x2b0
        V [libjvm.so+0x9ee1ea] Compile::Optimize()+0x60a
        V [libjvm.so+0x9f0ca6] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1b96
        V [libjvm.so+0x84aa54] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x3c4
        V [libjvm.so+0x9fcbb0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa00
        V [libjvm.so+0x9fda38] CompileBroker::compiler_thread_loop()+0x618
        V [libjvm.so+0xeb5b6c] JavaThread::thread_main_inner()+0xcc
        V [libjvm.so+0x179316a] Thread::call_run()+0xba
        V [libjvm.so+0x149450c] thread_native_entry(Thread*)+0x11c

              Assignee:
              Eric Nothum (Inactive)
              Reporter:
              Christian Hagedorn
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: