8309266: C2: assert(final_con == (jlong)final_int) failed: final value should be integer

Reviewed-by: chagedorn, dlong
Backport-of: 4a9cc8a000cafb3ad77a33710054b567e8553652